Collapse: fix horizontal scroll issue

--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,6 @@ li.is-after-active .card-board-tabs-inner {
 
 .card-board-columns {
   display: flex;
-  overflow-x: auto;
 }
 
 .card-board-columns::after {
